kubernetes/mongodb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: mongodb

spec: 
  serviceName: mongodb-headless

  replicas: 1

  selector:
    matchLabels: 
      app: mongodb

  template:
    metadata:
      labels:
        app: mongodb

    spec: 
      containers: 
        - name: mongodb
          image: mongo:7
          
          ports:
            - containerPort: 27017

          volumeMounts:
            - name: mongodb-storage
              mountPath: /data/db

      volumes:
        - name: mongodb-storage
          persistentVolumeClaim:
            claimName: mongodb-pvc
