kubernetes/mongodb-headless-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mongodb-headless

spec:
  clusterIP: None

  selector:
    app: mongodb

  ports:
    - port: 27017
      targetPort: kube27017
